Fix design of short ads on mobile.

--- a/bestofblocket/static/css/mobile.12.css
+++ b/bestofblocket/static/css/mobile.12.css
@@ -92,9 +92,10 @@ p {
     word-break:break-word;
 }
 
-#owl-demo .item{
-  margin: 3px;
+#owl-dem .owl-item{
+  width:100%;
 }
+
 #owl-demo .item img{
   display: block;
   width: 100%;
